@@ -1,6 +1,10 @@
 1.3.0 unreleased
 ================
 
+ * Ported events.txt test from Archetypes and adjusted it for the ATDocument
+   specific behavior.
+   [hannosch]
+
  * Adjusted tests to changed test base classes of Archetypes.
    [hannosch]
 
